# rexos

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  README.zh-CN.md  features.json  init.sh  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release-dry-run.yml  release.yml
crates/loopforge-cli/: Cargo.toml
crates/loopforge-cli/src/: cli.rs  dispatch.rs  doctor.rs  main.rs
crates/loopforge-cli/src/cli/: commands.rs  tests.rs
crates/loopforge-cli/src/cli/commands/: cron.rs
crates/loopforge-cli/src/dispatch/: acp.rs  agent.rs  cron.rs  release.rs
crates/loopforge-cli/src/dispatch/mcp/: diagnose.rs  tests.rs
crates/loopforge-cli/src/dispatch/skills/: doctor.rs  listing.rs
crates/loopforge-cli/src/doctor/: tests.rs
crates/loopforge-cli/src/doctor/tests/: bedrock.rs  common.rs  guidance.rs  probes.rs  security.rs
crates/rexos/: Cargo.toml
crates/rexos-cli/: Cargo.toml
crates/rexos-cli/src/: doctor.rs  main.rs
crates/rexos-harness/: Cargo.toml
crates/rexos-harness/src/: lib.rs
crates/rexos-llm/: Cargo.toml
crates/rexos-llm/src/: driver.rs  openai_compat.rs
crates/rexos-llm/src/anthropic/: driver.rs
crates/rexos-llm/src/bedrock/: driver.rs
crates/rexos-llm/src/dashscope/: driver.rs
crates/rexos-llm/src/gemini/: driver.rs
crates/rexos-llm/src/minimax/: driver.rs
crates/rexos-llm/src/registry/: build.rs  tests.rs
crates/rexos-llm/src/zhipu/: driver.rs
crates/rexos-runtime/: Cargo.toml
crates/rexos-runtime/src/: acp.rs  approval.rs  leak_guard.rs  lib.rs  records.rs  scheduling.rs  tool_calls.rs  workflow.rs
crates/rexos-runtime/src/records/: scheduling.rs
crates/rexos-runtime/src/scheduling/: cron.rs  runner.rs  storage.rs
crates/rexos-runtime/src/session_runner/: chat_loop.rs
crates/rexos-runtime/src/session_runner/tool_processing/: outcome.rs
crates/rexos-runtime/src/session_skills/: audit.rs  storage.rs
crates/rexos-skills/: Cargo.toml
crates/rexos-tools/: Cargo.toml
crates/rexos-tools/src/: browser_bridge.py  browser_cdp.rs  dispatch.rs  lib.rs
crates/rexos-tools/src/browser_cdp/session/interaction/input/press/dispatch/known/: send.rs
crates/rexos-tools/src/browser_cdp/session/interaction/input/wait/: result.rs
crates/rexos-tools/src/browser_cdp/tests/: discovery.rs  shared.rs
crates/rexos-tools/src/defs/: browser.rs  fs.rs  media.rs  mod.rs  process.rs  web.rs
crates/rexos-tools/src/defs/compat/: agents.rs  hands.rs  knowledge.rs  memory.rs  mod.rs  scheduling.rs  tasks.rs
crates/rexos-tools/src/defs/compat/scheduling/cron/: create.rs
crates/rexos-tools/src/mcp/: mod.rs  routing.rs  tests.rs  transport.rs
crates/rexos-tools/src/net/: filter.rs
crates/rexos-tools/src/ops/: browser.rs  fs.rs  media.rs  mod.rs  process.rs  web.rs
crates/rexos-tools/src/ops/fs/patching/: tests.rs
crates/rexos-tools/src/ops/fs/patching/apply/: ops.rs
crates/rexos-tools/src/ops/process/exec/docker/command/: tests.rs
crates/rexos-tools/src/ops/process/managed/io/: reader.rs
crates/rexos-tools/src/ops/web/a2a/discover/: url.rs
crates/rexos-tools/src/patch/: tests.rs  types.rs
crates/rexos-tools/src/patch/parse/sections/ops/: add.rs  parse.rs  tests.rs  update.rs
crates/rexos-tools/src/tests/: mod.rs
crates/rexos-tools/src/tests/browser/: bridge.rs
crates/rexos-tools/src/tests/process/: lifecycle.rs
crates/rexos/tests/: agent_loop.rs  browser_baidu_weather_smoke.rs  harness_initializer.rs  harness_runner.rs  harness_session_persistence.rs  llm_openai_compat.rs  loop_guard.rs  minimax_smoke.rs  ollama_shell_smoke.rs  reserved_cron_tools.rs  runtime_controls.rs  session_replay.rs  tools_web_fetch.rs  zhipu_smoke.rs
crates/rexos/tests/fixtures/replay/: session_egress_policy_a2a_discover_path_block.json  session_egress_policy_block.json
docker/sandbox-browser/: Dockerfile  README.md  compose.yml  entrypoint.sh
docs/: versioning-and-release.md
docs-site/: CNAME  index.md
docs-site/blog/: agent-memory-design.md  editorial-calendar.md  index.md  loopforge-next-iteration-openfang-openclaw.md  loopforge-v1-0-0-release-notes.md  mcp-integration-guide.md  rexos-vs-openfang-openclaw.md  safe-code-execution.md  what-is-loopforge.md
docs-site/examples/: daemon-health.md  harness-recipes.md  mechanical-edits.md  notifications.md  sanity-check.md
docs-site/explanation/: concepts.md  reliability-baseline.md  security.md
docs-site/how-to/: browser-automation.md  browser-use-cases.md  daemon.md  faq.md  install.md  onboarding-troubleshooting.md  providers.md  troubleshooting.md  use-cases.md  windows.md
docs-site/overrides/: main.html
docs-site/reference/: cli.md  config.md  tools.md
docs-site/social/: tweet-01-bugfix.sh  tweet-02-provider.sh  tweet-03-browser.sh  tweet-04-memory.sh
docs-site/tutorials/: first-day-starter-tasks.md  harness-long-task.md  new-user-walkthrough.md  quickstart-ollama.md
docs-site/zh/: index.md
docs-site/zh-CN/: index.md
docs/internal/: 2026-03-09-notes.zh-CN.md  index.md
docs/marketing/: editorial-calendar.md  openclaw-trend-x-posts.en.txt  openclaw-trend-x-posts.zh-CN.txt
docs/plans/: 2026-03-01-browser-tools.md  2026-03-01-cargo-workspace-split.md  2026-03-01-docs-site-refresh.md  2026-03-02-browser-cdp-acp-workflow-seo.md  2026-03-02-reserved-tools-phase2.md  2026-03-03-competitor-alignment-openclaw.md  2026-03-04-docs-growth-upgrade-design.md  2026-03-04-large-roadmap-l-batch.md  2026-03-05-loopforge-cli-command-migration-implementation.md  2026-03-05-loopforge-skills-system-implementation.md  2026-03-05-openclaw-trend-internal-playbook.md  2026-03-06-loopforge-onboarding-iteration-design.md  2026-03-06-loopforge-onboarding-iteration-implementation.md  2026-03-07-rexos-runtime-decomposition-design.md  2026-03-07-rexos-runtime-decomposition.md  2026-03-07-rexos-tools-defs-decomposition-design.md  2026-03-10-bedrock-provider.md  (+4 more)
scripts/: browser_sandbox_up.sh  onboard_metrics_report.py  package_release.py
src/: config.rs  lib.rs  main.rs
tests/: agent_loop.rs  daemon_health.rs  llm_anthropic.rs  llm_gemini.rs  llm_openai_compat.rs  tools_sandbox.rs
(+88 files in other folders)
