[package]
name = "rexos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "loopforge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
toml.workspace = true
rexos = { path = "../rexos" }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
