[package]
name = "rexos-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
rexos-kernel = { path = "../rexos-kernel" }
rexos-runtime = { path = "../rexos-runtime" }
