[package]
name = "rexos-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
rexos-kernel = { path = "../rexos-kernel" }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
