[package]
name = "rexos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
reqwest.workspace = true
rexos-kernel = { path = "../rexos-kernel" }
rexos-llm = { path = "../rexos-llm" }
rexos-memory = { path = "../rexos-memory" }
rexos-tools = { path = "../rexos-tools" }

[dev-dependencies]
tempfile.workspace = true
