[package]
name = "rexos-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dashmap = "6"
futures = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid.workspace = true
rexos-llm = { path = "../rexos-llm" }

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
